-- #############################################################################--
-- Scheme --
-- #############################################################################--

DROP DATABASE IF EXISTS CocoScheme;
CREATE DATABASE CocoScheme CHARACTER SET utf8 COLLATE utf8_general_ci;
USE CocoScheme;

CREATE TABLE IF NOT EXISTS `Role` (
    role_id INT PRIMARY KEY AUTO_INCREMENT,
    role_name VARCHAR(20) UNIQUE NOT NULL
);

CREATE TABLE IF NOT EXISTS Department (
    department_id INT PRIMARY KEY AUTO_INCREMENT,
    department_name VARCHAR(20) UNIQUE NOT NULL,
    costs_center VARCHAR(20),
    active BOOL NOT NULL DEFAULT TRUE
);

CREATE TABLE IF NOT EXISTS AlertMessage (
    message_id INT PRIMARY KEY AUTO_INCREMENT,

    message_text VARCHAR(60) NOT NULL
);

CREATE TABLE IF NOT EXISTS `User`(
    user_id INT PRIMARY KEY AUTO_INCREMENT,
    role_id INT,
    department_id INT,

    user_name VARCHAR(60) UNIQUE NOT NULL,
    password VARCHAR(60) NOT NULL,
    workstation VARCHAR(20) NOT NULL,
    email VARCHAR(254) UNIQUE NOT NULL,
    phone_number VARCHAR(254),
    creation_date TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    last_mod_date TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    active BOOL NOT NULL DEFAULT TRUE,
  
    FOREIGN KEY (role_id) REFERENCES `Role`(role_id),
    FOREIGN KEY (department_id) REFERENCES Department(department_id)
);

CREATE TABLE IF NOT EXISTS Request_status (
    request_status_id INT PRIMARY KEY AUTO_INCREMENT,
    status VARCHAR(30) UNIQUE NOT NULL
);

CREATE TABLE IF NOT EXISTS Request (
    request_id INT PRIMARY KEY AUTO_INCREMENT,
    user_id INT,
    request_status_id INT DEFAULT 1,

    notes LONGTEXT,
    requested_fee FLOAT,
    imposed_fee FLOAT,
    request_days FLOAT,
    creation_date TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    last_mod_date TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    active BOOL NOT NULL DEFAULT TRUE,

    FOREIGN KEY (user_id) REFERENCES `User`(user_id),
    FOREIGN KEY (request_status_id) REFERENCES Request_status(request_status_id)
);

CREATE TABLE IF NOT EXISTS Alert (
    alert_id INT PRIMARY KEY AUTO_INCREMENT,
    request_id INT,
    message_id INT,

    alert_date TIMESTAMP DEFAULT CURRENT_TIMESTAMP,

    FOREIGN KEY (request_id) REFERENCES Request(request_id),
    FOREIGN KEY (message_id) REFERENCES AlertMessage(message_id)
);

CREATE TABLE IF NOT EXISTS Country (
    country_id INT PRIMARY KEY AUTO_INCREMENT,
    country_name VARCHAR(60) UNIQUE NOT NULL
);

CREATE TABLE IF NOT EXISTS City (
    city_id INT PRIMARY KEY AUTO_INCREMENT,
    city_name VARCHAR(200) UNIQUE NOT NULL
);

CREATE TABLE IF NOT EXISTS `Route` (
    route_id INT PRIMARY KEY AUTO_INCREMENT,
    id_origin_country INT,
    id_origin_city INT,
    id_destination_country INT,
    id_destination_city INT,

    router_index INT,
    plane_needed BOOL NOT NULL DEFAULT FALSE,
    hotel_needed BOOL NOT NULL DEFAULT FALSE,
    beginning_date DATE,
    beginning_time TIME,
    ending_date DATE,
    ending_time TIME,

    FOREIGN KEY (id_origin_country) REFERENCES Country(country_id),
    FOREIGN KEY (id_origin_city) REFERENCES City(city_id),
    FOREIGN KEY (id_destination_country) REFERENCES Country(country_id),
    FOREIGN KEY (id_destination_city) REFERENCES City(city_id)
);

CREATE TABLE IF NOT EXISTS Route_Request (
    route_request_id INT PRIMARY KEY AUTO_INCREMENT,
    request_id INT,
    route_id INT,

    FOREIGN KEY (request_id) REFERENCES Request(request_id),
    FOREIGN KEY (route_id) REFERENCES `Route`(route_id)
);

CREATE TABLE IF NOT EXISTS Receipt_Type (
    receipt_type_id INT PRIMARY KEY AUTO_INCREMENT,
    receipt_type_name VARCHAR(20) UNIQUE NOT NULL
);

CREATE TABLE IF NOT EXISTS Receipt (
    receipt_id INT PRIMARY KEY AUTO_INCREMENT,
    receipt_type_id INT,
    request_id INT,

    validation ENUM('Pendiente', 'Aprobado', 'Rechazado') DEFAULT 'Pendiente',
    amount FLOAT NOT NULL,
    refund BOOL DEFAULT TRUE,

    submission_date TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    validation_date TIMESTAMP,

    FOREIGN KEY (receipt_type_id) REFERENCES Receipt_Type(receipt_type_id),
    FOREIGN KEY (request_id) REFERENCES Request(request_id)
);

-- #############################################################################--
-- Prepopulate --
-- #############################################################################--

USE CocoScheme;

INSERT INTO `Role` (role_name) VALUES
    ('Solicitante'),
    ('Agencia de viajes'),
    ('Cuentas por pagar'),
    ('N1'),
    ('N2'),
    ('Administrador');

INSERT INTO AlertMessage (message_text) VALUES
    ('Se ha abierto una solicitud.'),
    ('Se requiere tu revisión para Primera Revisión.'),
    ('Se requiere tu revisión para Segunda Revisión.'),
    ('La solicitud está lista para generar su cotización de viaje.'),
    ('Se deben asignar los servicios del viaje para la solicitud.'),
    ('Se requiere validar comprobantes de los gastos del viaje.'),
    ('Los comprobantes están listos para validación.');

INSERT INTO Request_status (status) VALUES
    ('Borrador'),
    ('Primera Revisión'),
    ('Segunda Revisión'),
    ('Cotización del Viaje'),
    ('Atención Agencia de Viajes'),
    ('Comprobación gastos del viaje'),
    ('Validación de comprobantes'),
    ('Finalizado'),
    ('Cancelado'),
    ('Rechazado');

INSERT INTO Receipt_Type (receipt_type_name) VALUES
    ('Hospedaje'),
    ('Comida'),
    ('Transporte'),
    ('Caseta'),
    ('Autobús'),
    ('Vuelo'),
    ('Otro');

-- #############################################################################--
-- Triggers --
-- #############################################################################--

USE CocoScheme;

DELIMITER $$

CREATE OR REPLACE TRIGGER DeactivateRequest
BEFORE UPDATE ON Request
FOR EACH ROW
BEGIN
    IF NEW.request_status_id IN (9, 10) THEN
        SET NEW.active = FALSE;
    END IF;
END$$

CREATE OR REPLACE TRIGGER CreateAlert
AFTER INSERT ON Request
FOR EACH ROW
BEGIN
    IF EXISTS (SELECT 1 FROM AlertMessage WHERE message_id = NEW.request_status_id) THEN
        INSERT INTO Alert (request_id, message_id) VALUES
            (NEW.request_id, NEW.request_status_id);
    END IF;
END$$

CREATE OR REPLACE TRIGGER ManageAlertAfterRequestUpdate
AFTER UPDATE ON Request
FOR EACH ROW
BEGIN
    IF NEW.request_status_id IN (8, 9, 10) THEN
        DELETE FROM Alert
        WHERE request_id = NEW.request_id;
    ELSEIF OLD.request_status_id <> NEW.request_status_id THEN
        UPDATE Alert
        SET message_id = NEW.request_status_id
        WHERE request_id = NEW.request_id;
    END IF;
END$$

DELIMITER ;

-- #############################################################################--
-- Views --
-- #############################################################################--

USE CocoScheme;

CREATE OR REPLACE VIEW UserRequestHistory AS
    SELECT
        Request.request_id,
        Request.user_id,
        Request.creation_date,
        Request_status.status,
        
        GROUP_CONCAT(DISTINCT Country_origin.country_name ORDER BY Route.router_index SEPARATOR ', ') AS trip_origins,
        GROUP_CONCAT(DISTINCT Country_destination.country_name ORDER BY Route.router_index SEPARATOR ', ') AS trip_destinations
    FROM
        Request
        INNER JOIN Request_status
            ON Request.request_status_id = Request_status.request_status_id
        LEFT JOIN Route_Request
            ON Request.request_id = Route_Request.request_id
        LEFT JOIN Route
            ON Route_Request.route_id = Route.route_id
        LEFT JOIN Country AS Country_origin
            ON Route.id_origin_country = Country_origin.country_id
        LEFT JOIN Country AS Country_destination
            ON Route.id_destination_country = Country_destination.country_id
    GROUP BY
        Request.request_id,
        Request.user_id,
        Request.last_mod_date,
        Request_status.status;




CREATE OR REPLACE VIEW RequestWithRouteDetails AS
    SELECT
        Request.request_id,
        Request.user_id,
        Request.request_status_id,
        Request.notes,
        Request.requested_fee,
        Request.imposed_fee,
        Request.request_days,
        Request.creation_date,
        Request.last_mod_date,
        Request.active,

        `User`.user_name,
        `User`.email AS user_email,
        `User`.phone_number AS user_phone_number,

        Request_status.status,

        Department.department_name,
        Department.department_id,

        GROUP_CONCAT(DISTINCT Country_origin.country_name ORDER BY Route.router_index SEPARATOR ', ') AS origin_countries,
        GROUP_CONCAT(DISTINCT City_origin.city_name ORDER BY Route.router_index SEPARATOR ', ') AS origin_cities,
        GROUP_CONCAT(DISTINCT Country_destination.country_name ORDER BY Route.router_index SEPARATOR ', ') AS destination_countries,
        GROUP_CONCAT(DISTINCT City_destination.city_name ORDER BY Route.router_index SEPARATOR ', ') AS destination_cities,
        GROUP_CONCAT(DISTINCT Route.beginning_date ORDER BY Route.router_index SEPARATOR ', ') AS beginning_dates,
        GROUP_CONCAT(DISTINCT Route.beginning_time ORDER BY Route.router_index SEPARATOR ', ') AS beginning_times,
        GROUP_CONCAT(DISTINCT Route.ending_date ORDER BY Route.router_index SEPARATOR ', ') AS ending_dates,
        GROUP_CONCAT(DISTINCT Route.ending_time ORDER BY Route.router_index SEPARATOR ', ') AS ending_times,
        GROUP_CONCAT(DISTINCT Route.hotel_needed ORDER BY Route.router_index SEPARATOR ', ') AS hotel_needed_list,
        GROUP_CONCAT(DISTINCT Route.plane_needed ORDER BY Route.router_index SEPARATOR ', ') AS plane_needed_list
    FROM
        Request
        LEFT JOIN `User`
            ON Request.user_id = `User`.user_id
        LEFT JOIN Request_status
            ON Request.request_status_id = Request_status.request_status_id
        LEFT JOIN Department
            ON `User`.department_id = Department.department_id
        LEFT JOIN Route_Request
            ON Request.request_id = Route_Request.request_id
        LEFT JOIN Route
            ON Route_Request.route_id = Route.route_id
        LEFT JOIN Country AS Country_origin
            ON Route.id_origin_country = Country_origin.country_id
        LEFT JOIN City AS City_origin
            ON Route.id_origin_city = City_origin.city_id
        LEFT JOIN Country AS Country_destination
            ON Route.id_destination_country = Country_destination.country_id
        LEFT JOIN City AS City_destination
            ON Route.id_destination_city = City_destination.city_id
    GROUP BY
        Request.request_id,
        Request.user_id,
        Request.request_status_id,
        Request.notes,
        Request.requested_fee,
        Request.imposed_fee,
        Request.request_days,
        Request.creation_date,
        Request.last_mod_date,
        Request.active,

        `User`.user_name,
        `User`.email,
        `User`.phone_number,
        
        Request_status.status,
        
        Department.department_name,
        Department.department_id;




CREATE OR REPLACE VIEW UserFullInfo AS
    SELECT
        u.user_id,
        u.user_name,
        u.email,
        r.role_name,
        d.department_name
    FROM
        `User` u
        LEFT JOIN `Role` r ON u.role_id = r.role_id
        LEFT JOIN Department d ON u.department_id = d.department_id;

-- #############################################################################--
-- Dummy Data --
-- #############################################################################--

USE CocoScheme;

INSERT INTO Department (department_name, costs_center, active) VALUES
  ('Finanzas', 'CC001', TRUE),
  ('Recursos Humanos', 'CC002', TRUE),
  ('IT', 'CC003', TRUE),
  ('Marketing', 'CC004', FALSE),
  ('Operaciones', 'CC005', TRUE),
  ('Servicios Generales', 'CC006', TRUE),
  ('Administración', 'CC007', TRUE),
  ('Sistemas Avanzados', 'CC008', FALSE),
  ('Desarrollo', 'CC009', TRUE),
  ('Recursos No Hum', 'CC010', TRUE),
  ('Legal', 'CC011', TRUE),
  ('Soporte', 'CC012', TRUE),
  ('Producto', 'CC013', TRUE),
  ('Ventas', 'CC014', TRUE),
  ('Investigación', 'CC015', TRUE),
  ('Relaciones', 'CC016', TRUE),
  ('Calidad', 'CC017', TRUE),
  ('Inteligencia', 'CC018', TRUE),
  ('Cumplimiento', 'CC019', TRUE),
  ('Logística', 'CC020', FALSE),
  ('Compras', 'CC021', TRUE),
  ('Contabilidad', 'CC022', TRUE),
  ('Estrategia', 'CC023', TRUE),
  ('Seguridad', 'CC024', TRUE),
  ('Eventos', 'CC025', TRUE),
  ('Capacitación', 'CC026', TRUE),
  ('Global', 'CC027', TRUE),
  ('Instalaciones', 'CC028', TRUE),
  ('Diseño', 'CC029', TRUE),
  ('Desarrollo web', 'CC030', TRUE),
  ('Datos', 'CC031', TRUE),
  ('Ingeniería', 'CC032', TRUE),
  ('IA', 'CC033', TRUE),
  ('Innovación', 'CC034', TRUE),
  ('Nube', 'CC035', TRUE),
  ('Blockchain', 'CC036', TRUE),
  ('Comunicaciones', 'CC037', TRUE),
  ('Auditoría', 'CC038', TRUE),
  ('M&A', 'CC039', TRUE),
  ('Inversores', 'CC040', TRUE);


INSERT INTO `User` (role_id, department_id, user_name, password, workstation, email, phone_number, active) VALUES
  (1, 1, 'andres.gomez', 'andres123', 'WS101', 'andres.gomez@empresa.com', '555-1001', FALSE),
  (2, 1, 'paula.martinez', 'paula456', 'WS102', 'paula.martinez@empresa.com', '555-1002', TRUE),
  (3, 1, 'carlos.ramos', 'carlos789', 'WS103', 'carlos.ramos@empresa.com', '555-1003', TRUE),
  (4, 1, 'laura.flores', 'laura321', 'WS104', 'laura.flores@empresa.com', '555-1004', TRUE),
  (5, 1, 'diego.hernandez', 'diego654', 'WS105', 'diego.hernandez@empresa.com', '555-1005', FALSE),
  (6, 1, 'adminX_special', 'sup3rS3cret!', 'HACK001', 'adminx@empresaxd.com', '000-0000', TRUE),
  (1, 2, 'xx_m4nu_xx', 'qwerty123', 'WS???', 'manuel@empresa.com', '1234567890', TRUE),
  (2, 2, 'el_ch4p0', 'p4sSw0rd', 'SOFIA-PC', 'chapo@correo.com', NULL, TRUE),
  (3, 2, 'sofia_r', 'm1cor4zon', 'SOFIA-PC', 'sofia_random@mail.com', '555-ABCD', TRUE),
  (4, 2, 'miguel.de.cervantes', 'donquixote2023', 'DON-QUI', 'miguel@delamancha.com', '555-0000', FALSE),
  (5, 2, 'jose.perez', 'jose123', 'WS106', 'jose.perez@empresa.com', '555-1006', TRUE),
  (6, 2, 'lucia.garcia', 'lucia456', 'WS107', 'lucia.garcia@empresa.com', '555-1007', TRUE),
  (1, 3, 'pedro.sanchez', 'pedro789', 'WS108', 'pedro.sanchez@empresa.com', '555-1008', FALSE),
  (2, 3, 'marta.lopez', 'marta321', 'WS109', 'marta.lopez@empresa.com', '555-1009', TRUE),
  (3, 3, 'rafael.morales', 'rafael654', 'WS110', 'rafael.morales@empresa.com', '555-1010', TRUE),
  (4, 3, 'clara.silva', 'claraS3cret!', 'WS111', 'clara.silva@empresa.com', '555-1011', TRUE),
  (5, 3, 'luis.palomino', 'luisqwerty123', 'WS112', 'luis.palomino@empresa.com', '1234567891', TRUE),
  (6, 3, 'sandra.martinez', 'sandraP4ssw0rd', 'SOFIA-PC2', 'sandra.martinez@empresa.com', '555-1012', TRUE),
  (1, 4, 'juan.gonzalez', 'juan_m1cor4zon', 'SOFIA-PC3', 'juan.gonzalez@empresa.com', '555-1013', TRUE),
  (2, 4, 'laura.cortes', 'lauraDonquixote2023', 'DON-QUI2', 'laura.cortes@empresa.com', '555-1014', FALSE),
  (3, 4, 'alvaro.nunez', 'alvaro123', 'WS113', 'alvaro.nunez@empresa.com', '555-1015', TRUE),
  (4, 4, 'patricia.reyes', 'patricia789', 'WS114', 'patricia.reyes@empresa.com', '555-1016', TRUE),
  (5, 4, 'jorge.ferrer', 'jorge321', 'WS115', 'jorge.ferrer@empresa.com', '555-1017', FALSE),
  (6, 4, 'beatriz.sanchez', 'beatriz654', 'WS116', 'beatriz.sanchez@empresa.com', '555-1018', TRUE),
  (1, 5, 'alba.torres', 'albaS3cret!', 'HACK002', 'alba.torres@empresa.com', '555-1019', TRUE),
  (2, 5, 'ernesto.hernandez', 'ernesto123', 'WS117', 'ernesto.hernandez@empresa.com', '555-1020', TRUE),
  (3, 5, 'javier.morales', 'javier789', 'WS118', 'javier.morales@empresa.com', '555-1021', TRUE),
  (4, 5, 'maria.rodriguez', 'maria321', 'WS119', 'maria.rodriguez@empresa.com', '555-1022', FALSE),
  (5, 5, 'francisco.martin', 'francisco654', 'WS120', 'francisco.martin@empresa.com', '555-1023', TRUE),
  (6, 5, 'patricia.diaz', 'patriciaS3cret!', 'WS121', 'patricia.diaz@empresa.com', '555-1024', TRUE),
  (1, 6, 'tomas.gonzalez', 'tomasqwerty123', 'WS122', 'tomas.gonzalez@empresa.com', '1234567892', TRUE),
  (2, 6, 'beatriz.rodriguez', 'beatrizP4ssw0rd', 'SOFIA-PC4', 'beatriz.rodriguez@empresa.com', '555-1025', TRUE),
  (3, 6, 'jorge.martinez', 'jorge_m1cor4zon', 'SOFIA-PC5', 'jorge.martinez@empresa.com', '555-1026', TRUE),
  (4, 6, 'raul.ferrer', 'raulDonquixote2023', 'DON-QUI3', 'raul.ferrer@empresa.com', '555-1027', FALSE),
  (5, 6, 'isabel.perez', 'isabel123', 'WS123', 'isabel.perez@empresa.com', '555-1028', TRUE),
  (6, 6, 'oscar.diaz', 'oscar789', 'WS124', 'oscar.diaz@empresa.com', '555-1029', TRUE),
  (1, 7, 'roberto.gomez', 'roberto321', 'WS125', 'roberto.gomez@empresa.com', '555-1030', FALSE),
  (2, 7, 'carmen.lopez', 'carmen654', 'WS126', 'carmen.lopez@empresa.com', '555-1031', TRUE),
  (3, 7, 'natalia.fernandez', 'nataliaS3cret!', 'HACK003', 'natalia.fernandez@empresa.com', '555-1032', TRUE),
  (4, 7, 'victor.salazar', 'victor123', 'WS127', 'victor.salazar@empresa.com', '555-1033', TRUE),
  (5, 7, 'marta.perez', 'martaP4ssw0rd', 'SOFIA-PC6', 'marta.perez@empresa.com', '555-1034', TRUE),
  (6, 7, 'ignacio.lopez', 'ignacio_m1cor4zon', 'SOFIA-PC7', 'ignacio.lopez@empresa.com', '555-1035', TRUE),
  (1, 7, 'javier.cordero', 'javierDonquixote2023', 'DON-QUI4', 'javier.cordero@empresa.com', '555-1036', FALSE);


INSERT INTO Request (user_id, request_status_id, notes, requested_fee, imposed_fee, request_days, active) VALUES
  (1, 1, 'Solicito viáticos para viaje a conferencia en Barcelona.', 1500.00, 1200.00, 3.0, TRUE),
  (2, 2, 'Reembolso por gastos médicos durante viaje.', 800.00, 750.00, 1.0, TRUE),
  (3, 1, 'Solicitud de apoyo económico para capacitación online.', 500.00, 500.00, 0.0, TRUE),
  (1, 3, 'Viáticos para taller de liderazgo en Madrid.', 1200.00, 1000.00, 2.0, TRUE),
  (2, 1, 'Reembolso de transporte.', 300.00, 250.00, 0.5, TRUE),
  (3, 3, 'Apoyo para participación en congreso internacional.', 2000.00, 1800.00, 4.0, TRUE),
  (1, 2, 'Gastos operativos extraordinarios.', 650.00, 600.00, 0.0, TRUE),
  (2, 3, 'Viaje urgente por representación institucional.', 1750.00, 1500.00, 3.5, TRUE),
  (3, 1, 'Solicito anticipo para misión técnica en el extranjero.', 2200.00, 2000.00, 5.0, TRUE),
  (1, 2, 'Solicitud de viáticos por gira de supervisión.', 1300.00, 1200.00, 2.5, TRUE),
  (5, 4, 'Quiero ir a brr brr patapin por favor', 90.00, 80.00, 9.0, TRUE),
  (4, 6, 'Yo como cuando', 9999999.00, 10000.0, 10.2, TRUE),
  (5, 5, 'Solicito algo para que me den algo porque quiero algo y por eso solicito las cosas, porque el que quiere puede', 10.00, 8000.00, 3, FALSE),
  (6, 5, 'Momento gastar cuando gastas mucho', 999999999999999999999999999999999999.9999999999999999999, 1.00, 33, TRUE),
  (5, 6, 'Cambio de registro para cambiar lo registrado porque se requere cambiar por el nuevo cambio', 80, 0.001, 0.5, TRUE),
  (4, 5, 'anotando anotando anotando anotando anotando anotando anotando', 333333333, 11111111, 80, TRUE),
  (6, 4, 'Llendo al evento de fantasias épicas mayo 2030', 878723, 9823982, 932, TRUE),
  (5, 6, '¿Por qué te vas? Me olvidarás Me olvidarás', 99.99, 88, 3.5, TRUE),
  (4, 5, 'que lento el trafico, ¿por qué no pasa el camion :(?', 100, 100, 100, TRUE),
  (7, 7, 'con el te duele el corazon, conmigo te duelen los pies', 9823, 893, 10, TRUE),
  (9, 8, 'a caminar en el solazo a 40 grados', 3, 0.2, 0.8, FALSE),
  (8, 9, '', 32, 32, 10, FALSE),
  (10, 10, 'imagina hacerte 2 horas en viaje al trabajo, no podria ser yo', 34, 56, 9, FALSE),
  (7, 9, 'Motivo de solicitud número 43', 93, 239, 3, FALSE),
  (9, 8, 'Razones: No tengo ninguna razón para estarlo', 3, 93, 01, TRUE),
  (8, 10, 'Evento Vínculo 2025', 2025, 5, 1, FALSE),
  (10, 7, 'Primera línea de notas.\nSegunda línea de notas.', 3, 4, 9, TRUE),
  (7, 8, 'Mensaje: Mensaje', 92, 38, 10, TRUE),
  (9, 10, 'Solicitando para el evento', 9239, 9823, 2, FALSE),
  (8, 9, 'Llenando espacio', 38, 93, 2, FALSE),
  (1, 1, 'Solicitud de ejemplo 1', 100.00, 90.00, 5, TRUE),
  (2, 2, 'Solicitud de ejemplo 2', 150.00, 140.00, 7, TRUE),
  (3, 3, 'Solicitud de ejemplo 3', 200.00, 180.00, 10, TRUE),
  (4, 4, 'Solicitud de ejemplo 4', 50.00, 50.00, 3, TRUE),
  (5, 5, 'Solicitud de ejemplo 5', 300.00, 280.00, 15, TRUE),
  (6, 6, 'Solicitud de ejemplo 6', 120.00, 110.00, 6, TRUE),
  (7, 7, 'Solicitud de ejemplo 7', 180.00, 160.00, 8, TRUE),
  (8, 8, 'Solicitud de ejemplo 8', 250.00, 230.00, 12, TRUE),
  (9, 9, 'Solicitud de ejemplo 9', 75.00, 70.00, 4, FALSE),
  (10, 10, 'Solicitud de ejemplo 10', 400.00, 380.00, 20, FALSE);


INSERT INTO Country (country_name) VALUES
  ('MauriLand'),
  ('España'),
  ('México'),
  ('Estados Unidos'),
  ('Alemania'),
  ('Italia'),
  ('Francia'),
  ('Madagascar'),
  ('Polonia'),
  ('Malasia'),
  ('Kazajistán'),
  ('Japón'),
  ('Canadá'),
  ('Brasil'),
  ('Argentina'),
  ('Australia'),
  ('China'),
  ('Sudáfrica'),
  ('Egipto'),
  ('Rusia'),
  ('Noruega'),
  ('Suecia'),
  ('Finlandia'),
  ('Islandia'),
  ('Grecia'),
  ('Portugal'),
  ('Turquía'),
  ('Nueva Zelanda'),
  ('Corea del Sur'),
  ('Vietnam'),
  ('Tailandia'),
  ('Indonesia'),
  ('Filipinas'),
  ('Arabia Saudita'),
  ('Irlanda'),
  ('Colombia'),
  ('Chile'),
  ('Perú'),
  ('Ucrania'),
  ('Nigeria');


INSERT INTO City (city_name) VALUES
  ('Gotham'),
  ('Springfield'),
  ('CDMX'),
  ('Guadalajara'),
  ('Madrid'),
  ('Barceloa'),
  ('Tokyo'),
  ('Kyoto'),
  ('Brisbane'),
  ('Zúrich'),
  ('Melbourne'),
  ('Montreal'),
  ('Cracovia'),
  ('Ciudad del Cabo'),
  ('París'),
  ('Roma'),
  ('Berlín'),
  ('Londres'),
  ('Nueva York'),
  ('Los Ángeles'),
  ('Toronto'),
  ('Vancouver'),
  ('Buenos Aires'),
  ('Sao Paulo'),
  ('Lima'),
  ('Bogotá'),
  ('Nueva Delhi'),
  ('Pekín'),
  ('Seúl'),
  ('Estocolmo'),
  ('Oslo'),
  ('Helsinki'),
  ('Atenas'),
  ('Lisboa'),
  ('Estambul'),
  ('Auckland'),
  ('Dublín'),
  ('Manila'),
  ('Bangkok'),
  ('Yakarta');


INSERT INTO `Route` (id_origin_country, id_origin_city, id_destination_country, id_destination_city, router_index,
                     plane_needed, hotel_needed, beginning_date, beginning_time, ending_date, ending_time) VALUES
  (1, 1, 40, 40, 1, TRUE, FALSE, '2025-05-01', '08:00:00', '2025-05-01', '11:00:00'),
  (2, 2, 39, 39, 1, TRUE, TRUE,  '2025-05-02', '10:30:00', '2025-05-02', '14:30:00'),
  (3, 3, 38, 38, 1, FALSE, TRUE, '2025-05-03', '12:00:00', '2025-05-03', '15:00:00'),
  (4, 4, 37, 37, 1, TRUE, FALSE, '2025-05-04', '06:00:00', '2025-05-04', '09:00:00'),
  (5, 5, 36, 36, 1, TRUE, TRUE, '2025-05-05', '14:00:00', '2025-05-05', '18:00:00'),
  (6, 6, 35, 35, 1, FALSE, FALSE,'2025-05-06', '11:00:00', '2025-05-06', '13:00:00'),
  (7, 7, 34, 34, 1, TRUE, FALSE, '2025-05-07', '09:30:00', '2025-05-07', '12:30:00'),
  (8, 8, 33, 33, 1, FALSE, TRUE, '2025-05-08', '15:00:00', '2025-05-08', '18:30:00'),
  (9, 9, 32, 32, 1, TRUE, TRUE, '2025-05-09', '08:00:00', '2025-05-09', '11:15:00'),
  (10, 10, 31, 31, 1, TRUE, FALSE, '2025-05-10', '07:00:00', '2025-05-10', '09:00:00'),
  (11, 11, 30, 30, 1, FALSE, FALSE,'2025-05-11', '12:00:00', '2025-05-11', '15:00:00'),
  (12, 12, 29, 29, 1, TRUE, TRUE, '2025-05-12', '13:00:00', '2025-05-12', '17:00:00'),
  (13, 13, 28, 28, 1, TRUE, FALSE,'2025-05-13', '06:00:00', '2025-05-13', '08:30:00'),
  (14, 14, 27, 27, 1, FALSE, TRUE, '2025-05-14', '14:00:00', '2025-05-14', '17:00:00'),
  (15, 15, 26, 26, 1, TRUE, TRUE, '2025-05-15', '10:00:00', '2025-05-15', '13:00:00'),
  (16, 16, 25, 25, 1, FALSE, FALSE,'2025-05-16', '11:00:00', '2025-05-16', '13:45:00'),
  (17, 17, 24, 24, 1, TRUE, FALSE, '2025-05-17', '07:15:00', '2025-05-17', '09:45:00'),
  (18, 18, 23, 23, 1, TRUE, TRUE, '2025-05-18', '16:00:00', '2025-05-18', '19:00:00'),
  (19, 19, 22, 22, 1, FALSE, TRUE, '2025-05-19', '12:30:00', '2025-05-19', '16:00:00'),
  (20, 20, 21, 21, 1, TRUE, FALSE, '2025-05-20', '06:00:00', '2025-05-20', '08:00:00'),
  (21, 21, 20, 20, 1, FALSE, TRUE, '2025-05-21', '13:30:00', '2025-05-21', '15:30:00'),
  (22, 22, 19, 19, 1, TRUE, TRUE, '2025-05-22', '09:00:00', '2025-05-22', '11:45:00'),
  (23, 23, 18, 18, 1, TRUE, FALSE, '2025-05-23', '10:00:00', '2025-05-23', '12:30:00'),
  (24, 24, 17, 17, 1, FALSE, TRUE, '2025-05-24', '11:00:00', '2025-05-24', '13:30:00'),
  (25, 25, 16, 16, 1, TRUE, FALSE, '2025-05-25', '12:00:00', '2025-05-25', '14:30:00'),
  (26, 26, 15, 15, 1, TRUE, TRUE, '2025-05-26', '13:00:00', '2025-05-26', '15:30:00'),
  (27, 27, 14, 14, 1, FALSE, FALSE,'2025-05-27', '14:00:00', '2025-05-27', '16:30:00'),
  (28, 28, 13, 13, 1, TRUE, FALSE, '2025-05-28', '15:00:00', '2025-05-28', '17:30:00'),
  (29, 29, 12, 12, 1, TRUE, TRUE, '2025-05-29', '16:00:00', '2025-05-29', '18:30:00'),
  (30, 30, 11, 11, 1, FALSE, TRUE, '2025-05-30', '17:00:00', '2025-05-30', '19:30:00'),
  (31, 31, 10, 10, 1, TRUE, FALSE, '2025-05-31', '18:00:00', '2025-05-31', '20:30:00'),
  (32, 32, 9, 9, 1, TRUE, TRUE, '2025-06-01', '08:00:00', '2025-06-01', '10:30:00'),
  (33, 33, 8, 8, 1, FALSE, FALSE,'2025-06-02', '09:00:00', '2025-06-02', '11:30:00'),
  (34, 34, 7, 7, 1, TRUE, TRUE, '2025-06-03', '10:00:00', '2025-06-03', '12:30:00'),
  (35, 35, 6, 6, 1, FALSE, TRUE, '2025-06-04', '11:00:00', '2025-06-04', '13:30:00'),
  (36, 36, 5, 5, 1, TRUE, FALSE, '2025-06-05', '12:00:00', '2025-06-05', '14:30:00'),
  (37, 37, 4, 4, 1, TRUE, TRUE, '2025-06-06', '13:00:00', '2025-06-06', '15:30:00'),
  (38, 38, 3, 3, 1, FALSE, FALSE,'2025-06-07', '14:00:00', '2025-06-07', '16:30:00'),
  (39, 39, 2, 2, 1, TRUE, TRUE, '2025-06-08', '15:00:00', '2025-06-08', '17:30:00'),
  (40, 40, 1, 1, 1, FALSE, TRUE, '2025-06-09', '16:00:00', '2025-06-09', '18:30:00'),
  (39, 39, 2, 2, 2, FALSE, FALSE, '2025-06-09', '16:00:00', '2025-06-09', '18:30:00'),
  (38, 38, 3, 3, 3, TRUE, FALSE, '2025-06-10', '09:15:00', '2025-06-10', '11:45:00'),
  (37, 37, 4, 4, 4, TRUE, TRUE, '2025-06-11', '14:00:00', '2025-06-11', '17:00:00'),
  (36, 36, 5, 5, 2, FALSE, TRUE, '2025-06-12', '07:00:00', '2025-06-12', '09:30:00'),
  (35, 35, 6, 6, 3, TRUE, FALSE, '2025-06-13', '13:30:00', '2025-06-13', '15:45:00'),
  (36, 36, 7, 7, 2, FALSE, FALSE, '2025-06-14', '10:00:00', '2025-06-14', '12:20:00');


INSERT INTO Route_Request (request_id, route_id) VALUES
  (1, 1),
  (2, 2),
  (3, 3),
  (3, 44),
  (4, 4),
  (5, 5),
  (6, 6),
  (6, 41),
  (7, 7),
  (8, 8),
  (9, 9),
  (10, 10),
  (11, 11),
  (12, 12),
  (13, 13),
  (14, 14),
  (15, 15),
  (16, 16),
  (17, 17),
  (18, 18),
  (18, 45),
  (19, 19),
  (20, 20),
  (21, 21),
  (22, 22),
  (22, 43),
  (23, 23),
  (24, 24),
  (25, 25),
  (25, 42),
  (26, 26),
  (27, 27),
  (28, 28),
  (29, 29),
  (30, 30),
  (31, 31),
  (32, 32),
  (33, 33),
  (34, 34),
  (35, 35),
  (36, 36),
  (37, 37),
  (38, 38),
  (38, 46),
  (39, 39),
  (40, 40);


INSERT INTO Receipt (receipt_type_id, request_id, validation, amount, validation_date) VALUES
  (4, 1, 'Pendiente', 1587.45, NULL),
  (2, 2, 'Aprobado', 3420.10, '2025-04-19 09:00:00'),
  (3, 3, 'Rechazado', 1099.99, '2025-04-19 18:00:00'),
  (7, 4, 'Pendiente', 2895.00, '2037-04-19 18:00:59'),
  (2, 5, 'Aprobado', 4550.25, '2025-03-21 10:00:00'),
  (3, 6, 'Rechazado', 1905.30, '2025-04-22 12:00:00'),
  (6, 7, 'Pendiente', 2290.55, '2003-04-19 10:06:43'),
  (2, 8, 'Aprobado', 3035.10, '2025-02-23 16:00:00'),
  (5, 9, 'Rechazado', 498.75, '2025-04-23 18:30:00'),
  (1, 10, 'Pendiente', 4100.00, '2025-06-19 20:17:24'),
  (3, 33, 'Aprobado', 1722.80, NULL),
  (6, 27, 'Pendiente', 2788.65, '2003-07-31 06:35:24'),
  (5, 14, 'Rechazado', 3940.99, '2006-02-08 15:59:45'),
  (7, 36, 'Aprobado', 2165.44, '2036-07-17 16:50:33'),
  (1, 5, 'Pendiente', 1560.10, '2036-08-31 23:59:59'),
  (2, 40, 'Rechazado', 3312.77, NULL),
  (6, 11, 'Pendiente', 420.89, '2025-05-02 14:15:48'),
  (4, 26, 'Rechazado', 1801.23, '2020-03-18 16:15:24'),
  (3, 39, 'Pendiente', 2475.00, NULL),
  (5, 19, 'Aprobado', 3500.60, '2024-09-15 11:42:31'),
  (7, 21, 'Pendiente', 1344.00, '2023-07-02 09:30:05'),
  (1, 7, 'Aprobado', 3822.11, '2019-12-12 13:59:44'),
  (2, 1, 'Pendiente', 2650.00, '2017-01-20 22:48:12'),
  (3, 38, 'Rechazado', 1500.00, '2022-05-30 06:23:59'),
  (4, 22, 'Pendiente', 2100.10, NULL),
  (5, 13, 'Rechazado', 900.99, NULL),
  (6, 30, 'Aprobado', 4711.40, NULL),
  (4, 8, 'Rechazado', 1200.00, '2023-11-03 19:07:14'),
  (7, 18, 'Pendiente', 3870.87, '2021-08-14 10:10:10'),
  (1, 12, 'Aprobado', 2333.33, '2020-10-01 08:03:18'),
  (5, 28, 'Rechazado', 1455.50, '2025-01-05 12:22:11'),
  (7, 32, 'Pendiente', 3988.88, NULL),
  (2, 15, 'Aprobado', 999.90, '2026-02-17 17:55:43'),
  (6, 3, 'Rechazado', 3010.01, '2028-06-08 04:04:04'),
  (1, 24, 'Pendiente', 2737.00, '2010-03-25 07:07:07'),
  (2, 6, 'Aprobado', 1844.44, '2027-07-13 15:15:15'),
  (3, 20, 'Pendiente', 398.12, '2015-09-09 09:09:09'),
  (4, 10, 'Pendiente', 2468.00, NULL),
  (5, 37, 'Rechazado', 4123.45, '2029-04-04 20:20:20'),
  (6, 16, 'Aprobado', 1250.00, '2008-01-01 01:01:01');
